<resources>
    <string name="app_name"><b>KTools AIO</b> <i>(Alpha)</i></string>
    <string name="app_by">By NHK</string>
    <string name="email">noor.hotmail.h.1@gmail.com</string>
    <string name="email_u"><u>noor.hotmail.h.1@gmail.com</u></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_sidebar">Open sidebar</string>

    <string name="MainScreen">Main Screen</string>
    <string name="Tools">Toolbox</string>
    <string name="GeneralTools">General Tools</string>
    <string name="GeneralToolsSub">General tools that work on all devices and don\'t require root permission. Perhaps may require some of the basic android permissions (such as accessing storage&#8230;)</string>
    <string name="NavGeneralTools">Navigate to General Tools</string>
    <string name="RootTools">Root Tools</string>
    <string name="RootToolsSub">More advanced tools, working only on rooted devices. Require root access permission from the installed su app.</string>
    <string name="NavRootTools">Navigate to Root Tools</string>
    <string name="WhatIsRoot">What is root? (More info from wikipedia)</string>
    <string name="contact_dev">Contact the developer</string>
    <string name="Communicate">Communicate</string>
    <string name="Share">Share KTools</string>
    <string name="Sharing">Sharing&#8230;</string>
    <string name="restartkt">Restart KTools</string>
    <string name="Troubleshoot">Troubleshoot</string>
    <string name="xdaVisit">Visit xda thread</string>

    <string name="enterTools">Enter Toolbox</string>

    <string name="error">Error!</string>

    <!-- Rebooter_R Tool -->
    <string name="rebooter_r">Rebooter</string>
    <string name="rebooter_sub_r">Advanced reboot options</string>
    <string name="regular_rebooter_r">Regular Restart</string>
    <string name="regular_sub_rebooter_r">Reboot normally without any additions</string>
    <string name="hot_rebooter_r">Hot reboot</string>
    <string name="hot_sub_rebooter_r">Reboot the system without turning off the phone</string>
    <string name="safe_rebooter_r">Reboot into safe mode</string>
    <string name="safe_sub_rebooter_r">Go into safe mode for troubleshooting (third-party apps are disabled until the next reboot)</string>
    <string name="recovery_rebooter_r">Reboot into recovery</string>
    <string name="recovery_sub_rebooter_r">Reboot and go to the recovery</string>
    <string name="dl_rebooter_r">Reboot into download mode</string>
    <string name="dl_sub_rebooter_r">Reboot and enter download mode</string>
    <string name="shutdown_rebooter_r">Shutdown</string>
    <string name="shutdown_sub_rebooter_r">Normal shutdown</string>

</resources>
