<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rebooter_r_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nhk.app.ktools.rebooter_r_Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_rebooter_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tool_top_bg"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title_txt_rebooter_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:shadowColor="@color/Black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/rebooter_r"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/White" />

            <TextView
                android:id="@+id/title_txt_sub_rebooter_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/rebooter_sub_r"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?attr/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_rebooter_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin" />


                <Button
                    android:id="@+id/regular_rebooter_r"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="Regular_Restart"
                    android:text="@string/regular_rebooter_r" />

                <TextView
                    android:id="@+id/regular_sub_rebooter_r"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/regular_sub_rebooter_r"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <Button
                    android:id="@+id/hot_rebooter_r"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="Hot_Reboot"
                    android:text="@string/hot_rebooter_r" />

            <TextView
                android:id="@+id/hot_sub_rebooter_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/hot_sub_rebooter_r"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Button
                android:id="@+id/safe_rebooter_r"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Safe_Mode"
                android:text="@string/safe_rebooter_r" />

            <TextView
                android:id="@+id/safe_sub_rebooter_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/safe_sub_rebooter_r"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Button
                android:id="@+id/recovery_rebooter_r"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Recovery"
                android:text="@string/recovery_rebooter_r" />

            <TextView
                android:id="@+id/recovery_sub_rebooter_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/recovery_sub_rebooter_r"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Button
                android:id="@+id/dl_rebooter_r"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Download"
                android:text="@string/dl_rebooter_r" />

            <TextView
                android:id="@+id/dl_sub_rebooter_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/dl_sub_rebooter_r"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <Button
                android:id="@+id/shutdown_rebooter_r"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Shutdown"
                android:text="@string/shutdown_rebooter_r" />

            <TextView
                android:id="@+id/shutdown_sub_rebooter_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/shutdown_sub_rebooter_r"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />


        </LinearLayout>
</LinearLayout>
</ScrollView>
