<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nhk.app.ktools.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Title_general_ic"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:tint="@color/colorAccent"
                app:srcCompat="@android:drawable/ic_menu_preferences" />

            <TextView
                android:id="@+id/Title_General"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:text="@string/GeneralTools"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <TextView
            android:id="@+id/Title_general_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GeneralToolsSub"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Button
            android:id="@+id/btn_general"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxWidth="100dp"
            android:text="@string/NavGeneralTools" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/title_root_ic"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:tint="@android:color/holo_orange_dark"
                app:srcCompat="@drawable/su" />

            <TextView
                android:id="@+id/title_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:text="@string/RootTools"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/holo_orange_dark" />
        </LinearLayout>

        <TextView
            android:id="@+id/title_root_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RootToolsSub"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/MoreRootInfo"
            android:layout_width="match_parent"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/WhatIsRoot"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_root"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxWidth="100dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/NavRootTools" />
    </LinearLayout>

    <TextView
        android:id="@+id/info_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="App name, Version: x.x~"
        android:textAlignment="center"
        android:visibility="visible" />

</LinearLayout>